main/cksfv/cksfv-1.3.15-r3.log
pigz: not found
>>> cksfv: Building main/cksfv 1.3.15-r3 (using abuild 3.14.1-r4) started Fri, 23 May 2025 18:38:29 +0000
>>> cksfv: Validating /home/packager/aports/main/cksfv/APKBUILD...
>>> cksfv: Analyzing dependencies...
>>> cksfv: Installing for build: build-base cmd:bash
(1/1) Installing .makedepends-cksfv (20250523.183831)
OK: 564 MiB in 133 packages
>>> cksfv: Cleaning up srcdir
>>> cksfv: Cleaning up pkgdir
>>> cksfv: Cleaning up tmpdir
>>> cksfv: Fetching http://zakalwe.fi/~shd/foss/cksfv/files/cksfv-1.3.15.tar.bz2
Connecting to zakalwe.fi (65.108.10.55:80)
saving to '/var/cache/distfiles/cksfv-1.3.15.tar.bz2.part'
cksfv-1.3.15.tar.bz2 100% |********************************| 27282  0:00:00 ETA
'/var/cache/distfiles/cksfv-1.3.15.tar.bz2.part' saved
>>> cksfv: Fetching http://zakalwe.fi/~shd/foss/cksfv/files/cksfv-1.3.15.tar.bz2
>>> cksfv: Checking sha512sums...
cksfv-1.3.15.tar.bz2: OK
>>> cksfv: Unpacking /var/cache/distfiles/cksfv-1.3.15.tar.bz2...
unknown configure argument: --build=x86_64-alpine-linux-musl (ignoring)
unknown configure argument: --host=x86_64-alpine-linux-musl (ignoring)

  prefix directory:          /usr
  package prefix:            
  binary directory:          /usr/bin
  man directory:             /usr/share/man
  compiler:                  gcc
  has stdint.h:              no (compilation will probably fail)
  has inttypes.h:            no
  nautilus support:          no

configure succesful.
cd src && make
make[1]: Entering directory '/home/packager/aports/main/cksfv/src/cksfv-1.3.15/src'
gcc -W -Wall -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -I. -Os -fstack-clash-protection -Wformat -Werror=format-security -fno-plt -o cksfv cksfv.c print.c crc32.c readsfv.c newsfv.c  -Wl,--as-needed,-O1,--sort-common -Wl,-z,pack-relative-relocs
crc32.c:26:14: error: unknown type name 'uint32_t'
   26 | static const uint32_t crctable[256] = {
      |              ^~~~~~~~
crc32.c:23:1: note: 'uint32_t' is defined in header '<stdint.h>'; this is probably fixable by adding '#include <stdint.h>'
   22 | #include "config.h"
  +++ |+#include <stdint.h>
   23 | 
crc32.c:94:19: error: unknown type name 'uint32_t'
   94 | int crc32(int fd, uint32_t * main_val)
      |                   ^~~~~~~~
crc32.c:94:19: note: 'uint32_t' is defined in header '<stdint.h>'; this is probably fixable by adding '#include <stdint.h>'
crc32.c:26:23: warning: 'crctable' defined but not used [-Wunused-const-variable=]
   26 | static const uint32_t crctable[256] = {
      |                       ^~~~~~~~
make[1]: *** [Makefile:25: cksfv] Error 1
make[1]: Leaving directory '/home/packager/aports/main/cksfv/src/cksfv-1.3.15/src'
make: *** [Makefile:23: all] Error 2
>>> ERROR: cksfv: build failed
>>> cksfv: Uninstalling dependencies...
(1/1) Purging .makedepends-cksfv (20250523.183831)
OK: 564 MiB in 132 packages
